--- a/.github/workflows/build-ruoqi-sys-admin-docker.yml
+++ b/.github/workflows/build-ruoqi-sys-admin-docker.yml
@@ -16,7 +16,7 @@ on:
       - 'apps/ruoqi-sys-admin/**'
       - 'scripts/ruoqi-sys-admin-build/**'
       - 'package.json'
-  workflow_dispatch: # 允许手动触发
+  workflow_dispatch:
     inputs:
       tag_suffix:
         description: 'Docker tag suffix (optional)'
@@ -26,8 +26,6 @@ on:
 env:
   REGISTRY: docker.io
   IMAGE_NAME: ruoqi-sys-admin
-  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-  DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
 jobs:
   build-and-push:
@@ -37,40 +35,15 @@ jobs:
       contents: read
       packages: write
 
+    outputs:
+      version_tag: ${{ steps.version.outputs.tag }}
+      build_status: ${{ job.status }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:master
-            network=host
-
-      - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ env.DOCKER_HUB_USERNAME }}
-          password: ${{ env.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -86,8 +59,7 @@ jobs:
 
       - name: Configure build environment
         run: |
-          # 确保环境文件存在并配置
-          mkdir -p ./apps/ruoqi-sys-admin
+          # 确保环境文件存在
           if [ ! -f "./apps/ruoqi-sys-admin/.env.production" ]; then
             echo "VITE_COMPRESS = gzip" > ./apps/ruoqi-sys-admin/.env.production
             echo "VITE_PWA = true" >> ./apps/ruoqi-sys-admin/.env.production
@@ -102,19 +74,18 @@ jobs:
           cat ./apps/ruoqi-sys-admin/.env.production
 
       - name: Build ruoqi-sys-admin
+        id: build
         run: |
           echo "Building ruoqi-sys-admin project..."
-          # 优先使用项目定义的构建命令
           if grep -q '"build:ruoqi"' package.json; then
             pnpm run build:ruoqi
           elif grep -q '"build:sys-admin"' package.json; then
             pnpm run build:sys-admin
           else
-            # 使用 pnpm filter 构建特定项目
             pnpm run build --filter=./apps/ruoqi-sys-admin
           fi
 
-          echo "Build output:"
+          echo "Build completed successfully!"
           ls -la ./apps/ruoqi-sys-admin/dist/
 
       - name: Generate version tag
@@ -130,14 +101,12 @@ jobs:
           SHORT_SHA=${GITHUB_SHA::8}
           DATE=$(date +'%Y%m%d')
 
-          # 如果是手动触发，使用输入的标签后缀
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.tag_suffix }}" ]; then
             TAG_SUFFIX="-${{ github.event.inputs.tag_suffix }}"
           else
             TAG_SUFFIX=""
           fi
 
-          # 生成完整的标签
           FULL_TAG="v${VERSION}-${DATE}-${SHORT_SHA}${TAG_SUFFIX}"
 
           echo "Version: ${VERSION}"
@@ -148,41 +117,50 @@ jobs:
           echo "tag=${FULL_TAG}" >> $GITHUB_OUTPUT
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Build Docker image
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./scripts/ruoqi-sys-admin-build/Dockerfile
-          push: false # 先不推送，用于 PR
+          push: false
           tags: |
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:build-${{ github.run_number }}
+            ${{ env.IMAGE_NAME }}:local-test
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=docker,dest=/tmp/image.tar
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
 
-      - name: Test Docker image
+      - name: Test Docker image locally
         run: |
-          # 加载并测试镜像
-          docker load --input /tmp/image.tar
-          docker run --rm \
-            --name ruoqi-test \
-            -p 8081:8081 \
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:build-${{ github.run_number }} &
+          echo "Testing Docker image..."
+          docker run --rm -d --name test-ruoqi -p 8080:8080 ${{ env.IMAGE_NAME }}:local-test
+          sleep 3
 
-          sleep 5
-
-          # 检查容器是否运行
-          if docker ps | grep -q ruoqi-test; then
+          # 检查容器是否在运行
+          if docker ps | grep -q test-ruoqi; then
             echo "✅ Docker container is running"
-            # 停止测试容器
-            docker stop ruoqi-test
+            docker stop test-ruoqi
+            echo "Test passed!"
           else
             echo "❌ Docker container failed to start"
+            docker logs test-ruoqi || true
             exit 1
           fi
 
-      - name: Push Docker image (on main branch)
+      - name: Push Docker image to Docker Hub
         if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
@@ -190,61 +168,51 @@ jobs:
           file: ./scripts/ruoqi-sys-admin-build/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:v${{ steps.version.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:v${{ steps.version.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
-            org.opencontainers.image.created=${{ steps.meta.outputs.created }}
+            org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.version=${{ steps.version.outputs.version }}
 
-      - name: Deploy to staging (optional)
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        env:
-          DEPLOY_HOST: ${{ secrets.STAGING_DEPLOY_HOST }}
-          DEPLOY_USER: ${{ secrets.STAGING_DEPLOY_USER }}
-          DEPLOY_KEY: ${{ secrets.STAGING_DEPLOY_KEY }}
+      - name: Post-build success message
+        if: success()
         run: |
-          echo "Deploying to staging environment..."
-          # 这里可以添加部署到 staging 环境的逻辑
-          echo "Image: ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}"
+          echo "🎉 Build and push completed successfully!"
+          echo "📦 Image: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}"
+          echo "📦 Latest: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo "🐳 Docker Hub: https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags"
 
-      - name: Update deployment status
-        if: always()
+          # 创建部署摘要
+          echo "## Docker Image Built Successfully" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Image Tags:**" >> $GITHUB_STEP_SUMMARY
+          echo "- \`${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Details:**" >> $GITHUB_STEP_SUMMARY
+          echo "- Version: ${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Build Date: $(date)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "[View on Docker Hub](https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags)" >> $GITHUB_STEP_SUMMARY
+
+      - name: Post-build failure message
+        if: failure()
         run: |
-          if [ "${{ job.status }}" = "success" ]; then
-            echo "🎉 Build and push completed successfully!"
-            echo "📦 Image: ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.tag }}"
-            echo "🐳 Docker Hub: https://hub.docker.com/r/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags"
-          else
-            echo "❌ Build failed!"
-            exit 1
-          fi
+          echo "❌ Build failed!"
+          echo "Please check the logs above for details."
 
-  # 可选：添加安全检查
-  security-scan:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.event_name != 'pull_request'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: '${{ env.REGISTRY }}/${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.version }}'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+          echo "## ❌ Build Failed" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "The Docker image build failed. Please check the workflow logs for details." >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Troubleshooting tips:**" >> $GITHUB_STEP_SUMMARY
+          echo "1. Check if all dependencies are installed correctly" >> $GITHUB_STEP_SUMMARY
+          echo "2. Verify the Dockerfile syntax" >> $GITHUB_STEP_SUMMARY
+          echo "3. Ensure the nginx.conf file exists in scripts/ruoqi-sys-admin-build/" >> $GITHUB_STEP_SUMMARY
+          echo "4. Check Docker Hub credentials in repository secrets" >> $GITHUB_STEP_SUMMARY
